fix(ui5-avatar): overflow initials are now scaling
Problem: Some initials with wide characters are resulting in fallback
icon.

Solution: We scale down font size of the initials until they fit in the
avatar.

Fixes: #10217

--- a/packages/main/src/themes/Avatar.css
+++ b/packages/main/src/themes/Avatar.css
@@ -3,6 +3,7 @@
 	box-sizing: border-box;
 	position: relative;
 	font-family: "72override", var(--sapFontFamily);
+	vertical-align: middle;
 }
 
 /* The ui5_hovered class is set by FileUploader to indicate hover state of the control */
